Added support for introducing data through console